Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myrazorapp
  labels:
    app: myrazorapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: myrazorapp
  template:
    metadata:
      labels:
        app: myrazorapp
    spec:
      containers:
      - name: myrazorapp
        image: bhanu8824/myrazorapp:1 # Update this with your image name (e.g., your Docker Hub image)
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "128Mi"
            cpu: "250m"
          limits:
            memory: "256Mi"
            cpu: "500m"
