service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myrazorapp-service
  labels:
    app: myrazorapp
spec:
  type: NodePort
  selector:
    app: myrazorapp
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
